--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
 https://www.npmjs.com/search?q=spdx&page=2&perPage=20
+
+
+legally	license	Check the licenses for the packages that you are using
+npm-license-crawler	licences	Analyzes license information for multiple node.js modules (package.json files) as part of your software project.
