--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ https://www.npmjs.com/search?q=spdx&page=2&perPage=20
 
 legally	license	Check the licenses for the packages that you are using
 npm-license-crawler	licences	Analyzes license information for multiple node.js modules (package.json files) as part of your software project.
+license-ls	licenses.list	Get a list of licenses for any installed project dependencies
+npm-license-corrections	license.spdxexpr	SPDX license expressions for npm packages without proper metadata
